--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1281,8 +1281,8 @@ en:
       or_click_html: >-
         Or, click <em>link it</em> on of your bikes to connect it to this %{bike_code_kind}:
       please_email_support_html: >-
-        Please email %{support_email} if you don't understand why you're seeing this
-        message or if you need an exception made.
+        Please email %{support_email_link} if you don't understand why you're seeing
+        this message or if you need an exception made.
       please_sign_in: please sign in
       to_link_that_card_with_a_bike: To link that card with a bike,
       update: Update
